--- a/src/index.css
+++ b/src/index.css
@@ -119,8 +119,13 @@ body, html {
   z-index: 1;
 }
 
-.contentStyle {
+.main-content {
+  padding-top: 0;          
+  max-width: 100vw;        
+  width: 100%;             
+  min-height: 100vh;       
+  box-sizing: border-box;  
   position: relative;
   z-index: 2;
-  max-width: 700px;
+  margin: 0 auto;          
 }
